[package]
name = "dlog_proof"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
generic-array = "1.1.0"
hex = "0.4"
k256 = { version = "0.13.3", features = ["sha256", "arithmetic"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
typenum = "1.15"
